user/K8S/np-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: np-svc
spec:
  type: ClusterIP
  selector:
    app: metrics
    department: sales
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
