user/K8S/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db-ingress
spec:
  rules:
    - http:
        paths:
          - path: /userdb # path at which you want to expose your service
            pathType: Prefix
            backend:
              service:
                name: mysql # name of the service
                port:
                  number: 3306 # port of the service
